--- a/proyecto/templates/app/index.html
+++ b/proyecto/templates/app/index.html
@@ -1,204 +1,99 @@
-{% load static %} {% load bootstrap4 %} {% load static i18n %}
-<!DOCTYPE html>
-<html lang="en">
+ {% extends 'base.html' %}{% load static %} {% load bootstrap4 %} {% load static i18n %} {% block content%}
 
-<head>
-    <title>Natural Holistic</title>
+<div id="demo" class="carousel slide" data-ride="carousel">
 
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Indicators -->
+    <ul class="carousel-indicators">
+        <li data-target="#demo" data-slide-to="0" class="active"></li>
+        <li data-target="#demo" data-slide-to="1"></li>
+        <li data-target="#demo" data-slide-to="2"></li>
+    </ul>
 
-    <!-- Hojas de estilo -->
-    <link rel="stylesheet" href="{% static 'css/style.css' %}" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrami.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrami.min.js"></script>
-    <script src="https://kit.fontawesome.com/94d365e8cc.js" crossorigin="anonymous"></script>
-</head>
-
-<body>
-
-    <nav class="navbar navbar-expand-xl navbar-default">
-
-        <a class="navbar-brand d-flex align-items-center" href="{% url 'app:index' %}">
-            <img class="float-left" src="{% static 'img/unnamed.png' %}" alt="logo" style="width:110px;">
-            <h2 class="titulo_logo ml-3">Medicina<br>Alternativa</h2>
-        </a>
-
-        <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon">
-        <i class="fas fa-bars" style="color:rgb(77, 184, 118); font-size:28px;">
-        </i></span>
-    </button>
-
-        <div class="collapse navbar-collapse d-flex justify-content-center" id="navbarNav">
-            <ul class="nav navbar-nav">
-
-                <li class="nav-item">
-                    <a class="nav-link" href="#">{% trans 'SOBRE MÍ' %}</a>
-                </li>
-
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'app:Tratamientos' %}">{% trans 'TRATAMIENTOS' %}</a>
-                </li>
-
-                <li class="nav-item">
-                    <a class="nav-link" href="#">{% trans 'PATOLOGÍAS'  %}</a>
-                </li>
-
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'app:blog' %}">{% trans 'BLOG' %}</a>
-                </li>
-
-                <li class="nav-item">
-                    <a class="nav-link" href="#">{% trans 'TESTIMONIOS' %}</a>
-                </li>
-
-                <li class="bandera">
-                    {% language 'es' %}
-                    <a href="{% url 'app:index' %}"><img src="{% static 'img/banderaES.jpg' %}"></a>
-                    {% endlanguage %}
-                </li>
-
-                <li class="bandera ml-2">
-                    {% language 'en' %}
-                    <a href="{% url 'app:index' %}"><img src="{% static 'img/banderaEN.jpg' %}"></a>
-                    {% endlanguage %}
-                </li>
-            </ul>
+    <!-- The slideshow -->
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img src="{% static 'img/imgHol.jpg' %}" alt="Los Angeles" width="1100" height="500">
         </div>
-    </nav>
-
-    {% block content%}
-
-    <div id="demo" class="carousel slide" data-ride="carousel">
-
-        <!-- Indicators -->
-        <ul class="carousel-indicators">
-            <li data-target="#demo" data-slide-to="0" class="active"></li>
-            <li data-target="#demo" data-slide-to="1"></li>
-            <li data-target="#demo" data-slide-to="2"></li>
-        </ul>
-
-        <!-- The slideshow -->
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="{% static 'img/imgHol.jpg' %}" alt="Los Angeles" width="1100" height="500">
-            </div>
-            <div class="carousel-item">
-                <img src="{% static 'img/medHol2.jpg' %}" alt="Chicago" width="1100" height="500">
-            </div>
-            <div class="carousel-item">
-                <img src="{% static 'img/medHol3.png' %}" alt="New York" width="1100" height="500">
-            </div>
+        <div class="carousel-item">
+            <img src="{% static 'img/medHol2.jpg' %}" alt="Chicago" width="1100" height="500">
         </div>
-
-        <!-- Left and right controls -->
-        <a class="carousel-control-prev" href="#demo" data-slide="prev">
-            <span class="carousel-control-prev-icon"></span>
-        </a>
-        <a class="carousel-control-next" href="#demo" data-slide="next">
-            <span class="carousel-control-next-icon"></span>
-        </a>
+        <div class="carousel-item">
+            <img src="{% static 'img/medHol3.png' %}" alt="New York" width="1100" height="500">
+        </div>
     </div>
 
-
-    {% comment %}
-    <div class=".container-fluid responsiveContent">
-        <iframe src=' {{ MEDIA_URL }}{{ videofile }} ' type='video/mp4 ' width="560" allowfullscreen="" frameborder="50|7000"></iframe>
-    </div>
-    <br><br>
-
-    <script>
-        'undefined ' === typeof _trfq || (window._trfq = []);
-        'undefined ' === typeof _trfd && (window._trfd = []), _trfd.push({
-            'tccl.baseHost ': 'secureserver.net '
-        }), _trfd.push({
-            'ap ': 'cpsh '
-        }, {
-            'server ': 'p3plcpnl0769 '
-        })
+    <!-- Left and right controls -->
+    <a class="carousel-control-prev" href="#demo" data-slide="prev">
+        <span class="carousel-control-prev-icon"></span>
+    </a>
+    <a class="carousel-control-next" href="#demo" data-slide="next">
+        <span class="carousel-control-next-icon"></span>
+    </a>
+</div>
 
 
-        // Monitoring performance to make your website faster. If you want to opt-out, please contact web hosting support.
-    </script> {% endcomment %}
-    <br><br>
+{% comment %}
+<div class=".container-fluid responsiveContent">
+    <iframe src=' {{ MEDIA_URL }}{{ videofile }} ' type='video/mp4 ' width="560" allowfullscreen="" frameborder="50|7000"></iframe>
+</div>
+<br><br>
 
-    <div class="wrapper row3">
-        <main class="hoc container-fluid clear">
-            <!-- main body -->
+<script>
+    'undefined ' === typeof _trfq || (window._trfq = []);
+    'undefined ' === typeof _trfd && (window._trfd = []), _trfd.push({
+        'tccl.baseHost ': 'secureserver.net '
+    }), _trfd.push({
+        'ap ': 'cpsh '
+    }, {
+        'server ': 'p3plcpnl0769 '
+    })
 
-            <div class="sectiontitle">
+
+    // Monitoring performance to make your website faster. If you want to opt-out, please contact web hosting support.
+</script> {% endcomment %}
+<br><br>
+
+<div class="wrapper row3">
+    <main class="hoc container-fluid clear">
+        <!-- main body -->
+
+        <div class="sectiontitle">
+            <h6 class="heading font-x2">NUESTRO CENTRO</h6>
+        </div>
+        <article class="group">
+            <div class="one_half first">
                 <h6 class="heading">{{ mi.tituloCentro }}</h6>
-                <p>Quis mollis sit amet semper eget nulla cras tellus purus tincidunt</p>
+                <p>{{ mi.textoCentro }}</p>
             </div>
-            <article class="group">
-                <div class="one_half first">
-                    <h6 class="heading">{{ mi.tituloCentro }}</h6>
-                    <p>{{ mi.textoCentro }}</p>
-                </div>
-                <div class="one_half">
-                    <a class="imgover" href="#"><img src="{{ mi.imagenCentro.url }}" alt=""></a>
-                </div>
-            </article>
-
-        </main>
-    </div>
-
-    <!--   <div class="container-fluid contenedor">
-    <img class="imagenCentro float-left mr-5" src="{{ mi.imagenCentro.url }}">
-    <h5 class="titulo_centro" href="{% url 'app:sobremi' %}">{{ mi.tituloCentro }}</h5><br>
-    <h5 class="texto_centro" href="{% url 'app:sobremi' %}">{{ mi.textoCentro }}</h5>
-  </div> -->
-
-    <!--<div class="row container-fluid perfil d-flex align-items-center">
-    <div class="col-sm-8">
-      <h5 class="tituloPerfil" href="{% url 'app:sobremi' %} ">{{ mi.tituloPerfil }}</h5>
-      <h5 class="texto_perfil float-left mr-5" href="{% url 'app:sobremi' %} "></br>{{ mi.textoPerfil }}</h5>
-    </div>
-    <img class="col-sm-2 imagenPerfil rounded-circle" src="{{ mi.imagenPerfil.url }}">
-  </div> -->
-
-    <div class="bgded overlay">
-        <section id="testimonials" class="hoc container-fluid clear">
-            <div class="sectiontitle">
-                <h6 class="heading font-x2">SOBRE MÍ</h6>
+            <div class="one_half">
+                <a class="imgover" href="#"><img src="{{ mi.imagenCentro.url }}" alt=""></a>
             </div>
-            <article class="one_half first">
-                <figure class="clear"><img src="{{ mi.imagenPerfil.url }}" alt="">
-                    <figcaption>
-                        <h6 class="heading">{{ mi.tituloPerfil }}</h6>
-                        <em>Conubia nostra per inceptos</em></figcaption>
-                </figure>
-                <blockquote>{{ mi.textoPerfil }}</blockquote>
-            </article>
-        </section>
-    </div>
-    {% endblock content%}
+        </article>
+
+    </main>
+</div>
 
 
-
-    <footer>
-
-        <div class="container-fluid  footer mr-5 iconos">
-
-            <h6 class="text-uppercase font-weight-bold mr-5">Contacto</h6>
-            <p class="iconos">
-                <i class="fas fa-home mr-5"></i>{{ contacto.direccion }}</p>
-            <p class="iconos">
-                <i class="fas fa-envelope mr-5"></i>{{ contacto.mail }}</p>
-            <p class="iconos">
-                <i class="fas fa-phone mr-5"></i>{{ contacto.tel }}</p>
+<div class="bgded overlay">
+    <section id="testimonials" class="hoc container-fluid clear">
+        <div class="sectiontitle">
+            <h6 class="heading font-x2">SOBRE MÍ</h6>
         </div>
+        <article class="one_half first">
+            <figure class="clear"><img src="{{ mi.imagenPerfil.url }}" alt="">
+                <figcaption>
+                    <h6 class="heading">{{ mi.tituloPerfil }}</h6>
 
-    </footer>
+            </figure>
+            <blockquote>{{ mi.textoPerfil }}</blockquote>
+        </article>
+    </section>
+</div>
+{% endblock content%}
 
 
-    <script src='https://img1.wsimg.com/tcc/tcc_l.combined.1.0.6.min.js '></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js "></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js "></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrami.min.js "></script>
+
+
 
 </body>
 
