--- a/proyecto/app/static/css/style.css
+++ b/proyecto/app/static/css/style.css
@@ -41,6 +41,12 @@
     height: 100%;
 }
 
+.video-fluid {
+    width: 100%;
+    height: auto;
+    padding: 0px;
+}
+
 
 /* .responsiveContent {
     position: relative;
