--- a/proyecto/templates/app/patologias.html
+++ b/proyecto/templates/app/patologias.html
@@ -1,23 +1,30 @@
 {% extends 'app/index.html' %} {% load static %} {% load bootstrap4 %} {% block content%}
 <div class="container-fluid mt-4">
     <div class="row row-cols-1 row-cols-md-3">
-        {% for p in tra %}
+        {% for p in pat %}
         <div class="col">
-            <div class="col-md-12 ">
-                <h5><a class="nav-link titulo-tra mt-4" href="{% url 'app:infotratamiento' p.id %}">{{ p.nombre }}</a></h5>
-                <div class="card-deck">
-                    <div class="card rounded-circle">
+            <div class="col-md-12  tabbable tabs-left">
+                <ul class="nav nav-tabs" href=" {% url 'app:patologias' %} ">{{ p.sistema }}</ul>
 
-                        <img src="{{ p.imagen.url }}">
-
-                    </div>
+                <div class="tab-content ">
+                    {{ p.patologia }}
                 </div>
             </div>
         </div>
         {% endfor %}
+
+
     </div>
 </div>
 
+<div class="tabbable tabs-left ">
+    <ul class="nav nav-tabs ">
+        ...
+    </ul>
+    <div class="tab-content ">
+        ...
+    </div>
+</div>
 
 
 {% endblock content%}
