--- a/proyecto/templates/base.html
+++ b/proyecto/templates/base.html
@@ -35,7 +35,7 @@
             <ul class="nav navbar-nav">
 
                 <li class="nav-item">
-                    <a class="nav-link" href="#">{% trans 'SOBRE MÍ' %}</a>
+                    <a class="nav-link" href="#">{% trans 'INICIO' %}</a>
                 </li>
 
                 <li class="nav-item">
@@ -43,7 +43,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="#">{% trans 'PATOLOGÍAS'  %}</a>
+                    <a class="nav-link" href="{% url 'app:patologias' %}">{% trans  'PATOLOGÍAS' %}</a>
                 </li>
 
                 <li class="nav-item">
