Creacion nuevo models sistema y patologias

--- a/proyecto/app/static/css/style.css
+++ b/proyecto/app/static/css/style.css
@@ -273,3 +273,8 @@ Delete it completely to stop fading
 #testimonials article blockquote::before {
     color: rgba(0, 0, 0, .05);
 }
+
+a#v-pills-home-tab.nav-link.active{
+    background-color: cadetblue;
+}
+
