--- a/proyecto/templates/app/patologias.html
+++ b/proyecto/templates/app/patologias.html
@@ -1,21 +1,20 @@
 {% extends 'app/index.html' %} {% load static %} {% load bootstrap4 %} {% block content%}
 
- {% for p in pat %}
-<div class="row">
-  <div class="col-3">
-    <div class="nav flex-column nav-pills " id="v-pills-tab" role="tablist" aria-orientation="vertical">
  
-      <a class="nav-link" id="v-pills-home-tab" data-toggle="tab .-pane" href="#v-pills-home" role="tab" aria-controls="v-pills-home" aria-selected="true">{{ p.sistema }}</a>
+ <div class="container">                                       
+  <div class="dropdown">
+    {% for p in Psis %}
+    <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
+      {{ p.nombresistema }}
+    </button>
+    <div class="dropdown-menu">
+      {% for y in p.patologias.all %} 
+      <span class="dropdown-item-text">{{ y.nombrepatologia }}</span>
+      {% endfor %}
     </div>
-  </div>
-  
- 
-  <div class="col-9">
-    <div class="tab-content" id="v-pills-tabContent">
-       
-      <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab"> {{ p.patologia }}</div>
-    </div>
-  </div>
-</div>
     {% endfor %}
+  </div>
+
+</div>
+
 {% endblock content%}
