--- a/proyecto/templates/base.html
+++ b/proyecto/templates/base.html
@@ -1,6 +1,6 @@
 {% load static %} {% load bootstrap4 %} {% load static i18n %}
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 
 <head>
     <title>Natural Holistic</title>
@@ -35,7 +35,7 @@
             <ul class="nav navbar-nav">
 
                 <li class="nav-item">
-                    <a class="nav-link" href="#">{% trans 'INICIO' %}</a>
+                    <a class="nav-link" href="{% url 'app:index' %}">{% trans 'INICIO' %}</a>
                 </li>
 
                 <li class="nav-item">
