--- a/proyecto/templates/app/index.html
+++ b/proyecto/templates/app/index.html
@@ -76,7 +76,7 @@
 </div>
 
 
-<div class="bgded overlay mt-5">
+<!--<div class="bgded overlay mt-5">
     <section id="testimonials" class="hoc container-fluid clear">
         <div class="sectiontitle">
             <h6 class="heading font-x2">SOBRE MÍ</h6>
@@ -89,6 +89,27 @@
             </figure>
             <blockquote>{{ mi.textoPerfil }}</blockquote>
         </article>
+    </section>
+</div>-->
+
+
+
+<div class="mb-3 bgded mt-5">
+    <div class="row no-gutters">
+        <section id="testimonials" class="hoc container-fluid clear">
+            <div class="col-md-6">
+                <h6 class="heading font-x2 one_half first mt-5 mb-3">SOBRE MÍ</h6>
+                <article class="one_half first">
+                    <figure class="clear"><img src="{{ mi.imagenPerfil.url }}" alt=""></figure>
+                </article>
+            </div>
+            <div class="col-md-12">
+                <h6 class="heading d-flex justify-content-center">{{ mi.nombreDr }}</h6>
+                <article class="one_half second">
+                    <blockquote>{{ mi.textoPerfil }}</blockquote>
+                </article>
+            </div>
+    </div>
     </section>
 </div>
 {% endblock content%}
