--- a/proyecto/templates/base.html
+++ b/proyecto/templates/base.html
@@ -52,7 +52,7 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link" href="#">{% trans 'TESTIMONIOS' %}</a>
+                    <a class="nav-link" href="{% url 'app:testimonios' %}">{% trans 'TESTIMONIOS' %}</a>
                 </li>
 
                 <li class="bandera">
