--- a/proyecto/templates/app/testimonios.html
+++ b/proyecto/templates/app/testimonios.html
@@ -30,16 +30,20 @@
             <div class="carousel-inner" role="listbox">
 
                 <!--First slide-->
-                <div class="carousel-item active">
-
-                    <!--Grid column-->
+                {% for p in opi %}
+                {% cycle 'start' '' '' as slidestart silent %}
+                {% cycle '' '' 'end' as slideend silent %}
+                
+                {% if slidestart == 'start' %}
+                <div class="carousel-item {% if forloop.first %} active {% endif %}">     
                     <div class="row justify-content-center">
-                        {% for p in opi %}
+                {% endif %}
+                        
                         <div class="col-md-3">
                             <div class="testimonial">
                                 <!--Avatar-->
                                 <div class="avatar mx-auto">
-                                    <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(26).jpg" class="rounded-circle img-fluid">
+                                    <img src="{{ p.imagen.url }}" class="rounded-circle img-fluid">
                                 </div>
                                 <!--Content-->
                                 <h4 class="font-weight-bold mt-4"> {{ p.nombre }}</h4>
@@ -57,171 +61,13 @@
                             </div>
                         </div>
 
-                        <!--Grid column-->
-
-                        <!--Grid column-->
-
-                        <!--Grid column-->
-
-                        <!--Grid column-->
-
-                        {% endfor %}
-                        <!--Grid column-->
+                {% if slideend == 'end' %}
                     </div>
                 </div>
+                {% endif %}
+                {% endfor %}
 
-                <!--First slide-->
 
-                <!--Second slide-->
-                <div class="carousel-item">
-                    <div class="row justify-content-center">
-                        <!--Grid column-->
-                        <div class="col-md-3">
-                            <div class="testimonial">
-                                <!--Avatar-->
-                                <div class="avatar mx-auto">
-                                    <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(4).jpg" class="rounded-circle img-fluid">
-                                </div>
-                                <!--Content-->
-                                <h4 class="font-weight-bold mt-4">Blake Dabney</h4>
-                                <h6 class="blue-text font-weight-bold my-3">Web Designer</h6>
-                                <p class="font-weight-normal"><i class="fas fa-quote-left pr-2"></i>Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis laboriosam.</p>
-                                <!--Review-->
-                                <div class="grey-text">
-                                    <i class="fas fa-star"> </i>
-                                    <i class="fas fa-star"> </i>
-                                    <i class="fas fa-star"> </i>
-                                    <i class="fas fa-star"> </i>
-                                    <i class="fas fa-star-half-alt"> </i>
-                                </div>
-                            </div>
-                        </div>
-                        <!--Grid column-->
-
-                        <!--Grid column-->
-                        <div class="col-md-3 clearfix d-none d-md-block">
-                            <div class="testimonial">
-                                <!--Avatar-->
-                                <div class="avatar mx-auto">
-                                    <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(6).jpg" class="rounded-circle img-fluid">
-                                </div>
-                                <!--Content-->
-                                <h4 class="font-weight-bold mt-4">Andrea Clay</h4>
-                                <h6 class="blue-text font-weight-bold my-3">Front-end developer</h6>
-                                <p class="font-weight-normal"><i class="fas fa-quote-left pr-2"></i>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod eos id officiis hic tenetur quae.</p>
-                                <!--Review-->
-                                <div class="grey-text">
-                                    <i class="fas fa-star"> </i>
-                                    <i class="fas fa-star"> </i>
-                                    <i class="fas fa-star"> </i>
-                                    <i class="fas fa-star"> </i>
-                                    <i class="fas fa-star"> </i>
-                                </div>
-                            </div>
-                        </div>
-                        <!--Grid column-->
-
-                        <!--Grid column-->
-                        <div class="col-md-3 clearfix d-none d-md-block">
-                            <div class="testimonial">
-                                <!--Avatar-->
-                                <div class="avatar mx-auto">
-                                    <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(7).jpg" class="rounded-circle img-fluid">
-                                </div>
-                                <!--Content-->
-                                <h4 class="font-weight-bold mt-4">Cami Gosse</h4>
-                                <h6 class="blue-text font-weight-bold my-3">Phtographer</h6>
-                                <p class="font-weight-normal"><i class="fas fa-quote-left pr-2"></i>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium.</p>
-                                <!--Review-->
-                                <div class="grey-text">
-                                    <i class="fas fa-star"> </i>
-                                    <i class="fas fa-star"> </i>
-                                    <i class="fas fa-star"> </i>
-                                    <i class="fas fa-star"> </i>
-                                    <i class="far fa-star"> </i>
-                                </div>
-                            </div>
-                        </div>
-                        <!--Grid column-->
-                    </div>
-                </div>
-                <!--Second slide-->
-
-                <!--Third slide-->
-                <div class="carousel-item">
-                    <div class="row justify-content-center">
-                        <!--Grid column-->
-                        <div class="col-md-3">
-                            <div class="testimonial">
-                                <!--Avatar-->
-                                <div class="avatar mx-auto">
-                                    <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(8).jpg" class="rounded-circle img-fluid">
-                                </div>
-                                <!--Content-->
-                                <h4 class="font-weight-bold mt-4">Bobby Haley</h4>
-                                <h6 class="blue-text font-weight-bold my-3">Web Developer</h6>
-                                <p class="font-weight-normal"><i class="fas fa-quote-left pr-2"></i>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quod eos id officiis hic tenetur quae.</p>
-                                <!--Review-->
-                                <div class="grey-text">
-                                    <i class="fas fa-star"> </i>
-                                    <i class="fas fa-star"> </i>
-                                    <i class="fas fa-star"> </i>
-                                    <i class="fas fa-star"> </i>
-                                    <i class="fas fa-star"> </i>
-                                </div>
-                            </div>
-                        </div>
-                        <!--Grid column-->
-
-                        <!--Grid column-->
-                        <div class="col-md-3 clearfix d-none d-md-block">
-                            <div class="testimonial">
-                                <!--Avatar-->
-                                <div class="avatar mx-auto">
-                                    <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(10).jpg" class="rounded-circle img-fluid">
-
-                                </div>
-                                <!--Content-->
-                                <h4 class="font-weight-bold mt-4">Elisa Janson</h4>
-                                <h6 class="blue-text font-weight-bold my-3">Marketer</h6>
-                                <p class="font-weight-normal"><i class="fas fa-quote-left pr-2"></i>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium.</p>
-                                <!--Review-->
-                                <div class="grey-text">
-                                    <i class="fas fa-star"> </i>
-                                    <i class="fas fa-star"> </i>
-                                    <i class="fas fa-star"> </i>
-                                    <i class="fas fa-star"> </i>
-                                    <i class="fas fa-star-half-alt"> </i>
-                                </div>
-                            </div>
-                        </div>
-                        <!--Grid column-->
-
-                        <!--Grid column-->
-                        <div class="col-md-3 clearfix d-none d-md-block">
-                            <div class="testimonial">
-                                <!--Avatar-->
-                                <div class="avatar mx-auto">
-                                    <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(9).jpg" class="rounded-circle img-fluid">
-                                </div>
-                                <!--Content-->
-                                <h4 class="font-weight-bold mt-4">Rob Jacobs</h4>
-                                <h6 class="blue-text font-weight-bold my-3">Front-end developer</h6>
-                                <p class="font-weight-normal"><i class="fas fa-quote-left pr-2"></i>Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis laboriosam.</p>
-                                <!--Review-->
-                                <div class="grey-text">
-                                    <i class="fas fa-star"> </i>
-                                    <i class="fas fa-star"> </i>
-                                    <i class="fas fa-star"> </i>
-                                    <i class="fas fa-star"> </i>
-                                    <i class="far fa-star"> </i>
-                                </div>
-                            </div>
-                        </div>
-                        <!--Grid column-->
-                    </div>
-                </div>
-                <!--Third slide-->
 
             </div>
             <!--Slides-->
