--- a/proyecto/templates/app/patologias.html
+++ b/proyecto/templates/app/patologias.html
@@ -5,7 +5,7 @@
     <div class="row mb-5">
         {% for p in Psis %}
 
-        <div class="col-sm-4 d-flex justify-content-center mb-3 mt-5">
+        <div class="col-sm-4 d-flex justify-content-center mb-3 mt-5 cajita">
             <div class="card w-50 ">
                 <div class="card-body pato text-center" class="animate__animated animate__bounce">
                     <h5 class="card-title"> {{ p.nombresistema }}</h5>
