--- a/proyecto/app/static/css/style.css
+++ b/proyecto/app/static/css/style.css
@@ -6,36 +6,73 @@
     padding: 0;
 }
 
+
+/*AJUSTA EL TAMAÑO DE LAS IMAGENES*/
+
+img {
+    height: auto;
+    max-width: 100%;
+}
+
+
+/*DA EFECTO A LAS FOTOS CUANDO PONES EL RATON*/
+
+img {
+    margin-bottom: -6px;
+    cursor: pointer
+}
+
+img:hover {
+    opacity: 0.6;
+    transition: 0.3s
+}
+
+
+/*IDIOMA*/
+
+.bandera {
+    width: 40px;
+    height: 20px;
+}
+
+
+/*FONDO NAVBAR*/
+
+.navbar-default {
+    background-color: #e0f2f1;
+}
+
+.navbar-brand:hover {
+    color: rgb(77, 184, 118);
+}
+
+
+/*LOGO*/
+
+.navbar-brand {
+    color: rgb(77, 184, 118);
+}
+
 .titulo_logo {
     color: #16a374;
     text-shadow: #4EBE7B 0.1em 0.1em 0.2em;
     font-style: italic;
 }
 
+
+/*LINK*/
+
 .nav-link {
     text-align: center;
     font-size: 20px;
     margin-left: 50px;
-    font-style: italic;
     color: #16a374;
     text-shadow: #4EBE7B 0.1em 0.1em 0.2em;
+    font-style: italic;
 }
 
-.titulo-tra {
-    margin-left: 0;
-}
 
-.navbar-default {
-    background-color: #e0f2f1;
-}
-
-.navbar-brand {
-    color: rgb(77, 184, 118);
-}
-
-.navbar-brand:hover {
-    color: rgb(77, 184, 118);
-}
+/*CONTENIDO MULTIMEDIA*/
 
 .carousel-inner img {
     width: 100%;
@@ -45,136 +82,13 @@
 .video-fluid {
     width: 100%;
     height: auto;
-    padding: 0px;
 }
 
 
-/* .responsiveContent {
-    position: relative;
-    height: 0;
-    overflow: hidden;
-    padding-bottom: 60.2%;
-    margin-bottom: -400px;
-}
-
-.responsiveContent iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 50%;
-} */
-
-.titulo_centro {
-    text-align: center;
-    font-size: 18px;
-    margin-left: 6px;
-    margin-top: 50px;
-    color: #4EBE7B;
-    text-decoration: underline;
-}
-
-.texto_centro {
-    color: gray;
-    position: relative;
-}
-
-.tituloPerfil,
-.heading {
-    color: #4EBE7B 0.1em 0.1em 0.2em;
-    margin-left: 180px;
-    text-decoration: underline;
-}
-
-.texto_perfil {
-    color: gray;
-}
-
-.perfil {
-    margin-top: 150px;
-    margin-bottom: 150px;
-    /*width: 500px;**/
-}
-
-.iconos {
-    padding-top: 15px;
-    background-color: #e0f2f1;
-    margin: 0 auto;
-    padding-bottom: 10px;
-}
-
-.fas {
-    color: #4EBE7B;
-}
-
-img {
-    height: auto;
-    max-width: 100%;
-}
-
-.bandera {
-    width: 40px;
-    height: 20px;
-}
+/*INDEX NUESTRO CENTRO/INDEX SOBRE MI*/
 
 
-/*--------------------------------------------------------*/
-
-
-/* Content Area*/
-
-.container {
-    padding: 80px 0;
-}
-
-.sectiontitle {
-    display: block;
-    max-width: 55%;
-    margin: 0 auto 80px;
-    text-align: center;
-}
-
-.sectiontitle * {
-    margin: 0;
-}
-
-
-/* Transition Fade
-This gives a smooth transition to "ALL" elements used in the layout - other than the navigation form used in mobile devices
-If you don't want it to fade all elements, you have to list the ones you want to be faded individually
-Delete it completely to stop fading
---------------------------------------------------------------------------------------------------------------- */
-
-*,
-*::before,
-*::after {
-    transition: all .2s ease-in-out;
-}
-
-
-/* Colours
---------------------------------------------------------------------------------------------------------------- */
-
-.imgover:hover::before {
-    background: rgba(0, 0, 0, .55);
-}
-
-.imgover,
-.imgover:hover::after {
-    color: #FFFFFF;
-}
-
-
-/* Rows */
-
-.row3 {
-    color: #7A7A7A;
-    background-color: #FFFFFF;
-}
-
-.row3 .heading {
-    color: #121212;
-}
+/*Coloca los textos*/
 
 @media screen and (min-width:978px) {
     .hoc {
@@ -183,14 +97,27 @@ Delete it completely to stop fading
 }
 
 
-/*--------------------ESTILO SOBRE MÍ---------------------------------------------------*/
+/*Descripcion Nuestro Centro*/
+
+.row3 {
+    color: #7A7A7A;
+    background-color: #FFFFFF;
+}
+
+.heading {
+    text-align: center;
+    font-size: 18px;
+    margin-left: 6px;
+    margin-top: 50px;
+    text-decoration: underline;
+    color: #16a374;
+    text-shadow: #4EBE7B 0.1em 0.1em 0.2em;
+    font-style: italic;
+}
 
 .container {
     padding: 80px 0;
 }
-
-
-/* Content */
 
 .sectiontitle {
     display: block;
@@ -204,21 +131,27 @@ Delete it completely to stop fading
 }
 
 
-/* Testimonials */
-
-#testimonials article {
-    text-align: center;
-}
+/*Centra el texto sobre mi*/
 
 #testimonials article * {
     margin: 0;
     padding: 0;
+    text-align: center;
 }
 
-#testimonials article figure {
-    display: inline-block;
+
+/*Bocadillo del texto*/
+
+#testimonials article blockquote {
     margin-bottom: 20px;
+    padding: 20px;
+    border-radius: 25px 0;
+    color: #474747;
+    background-color: #e0f2f1;
 }
+
+
+/*Hace la foto redonda*/
 
 #testimonials article figure img {
     float: left;
@@ -226,57 +159,11 @@ Delete it completely to stop fading
     border-radius: 50%;
 }
 
-#testimonials article figure figcaption {
-    float: left;
-    margin-top: 30px;
-    font-size: 1.4rem;
-    text-align: left;
-}
 
-#testimonials article figure figcaption .heading {
-    font-size: 1.4rem;
-}
+/*TRATAMIENTOS*/
 
-#testimonials article figure figcaption em {
-    display: block;
-    margin-top: -5px;
-    font-size: .8rem;
-    font-style: normal;
-}
-
-#testimonials article blockquote {
-    margin-bottom: 20px;
-    padding: 20px;
-    border-radius: 25px 0;
-}
-
-#testimonials article blockquote::before {
-    top: 15px;
-    left: 15px;
-    font-size: 30px;
-    line-height: 30px;
-}
-
-*,
-*::before,
-*::after {
-    transition: all .3s ease-in-out;
-}
-
-
-/* Content */
-
-#testimonials article blockquote {
-    color: #474747;
-    background-color: #e0f2f1;
-}
-
-#testimonials article blockquote::before {
-    color: rgba(0, 0, 0, .05);
-}
-
-a#v-pills-home-tab.nav-link.active {
-    background-color: cadetblue;
+.titulo-tra {
+    margin-left: 0;
 }
 
 
@@ -333,14 +220,23 @@ div.card.w-50 {
 }
 
 
-/*DA EFECTO A LAS FOTOS CUANDO PONES EL RATON*/
+/*BLOG*/
 
-img {
-    margin-bottom: -6px;
-    cursor: pointer
+h5.widget-title {
+    color: #16a374;
+    text-shadow: #4EBE7B 0.1em 0.1em 0.2em;
 }
 
-img:hover {
-    opacity: 0.6;
-    transition: 0.3s
+
+/*FOOTER*/
+
+.iconos {
+    padding-top: 15px;
+    background-color: #e0f2f1;
+    margin: 0 auto;
+    padding-bottom: 10px;
+}
+
+.fas {
+    color: #16a374;
 }
