--- a/proyecto/templates/app/blog.html
+++ b/proyecto/templates/app/blog.html
@@ -26,7 +26,7 @@
 
         <!-- Pagination -->
         <nav class="dento-pagination mb-100">
-          <ul class="pagination .pagination-lg">
+          <ul class="pagination pagination-lg mt-4">
             <li class="page-item active">
               {% if page_obj.has_previous %}
               <a class="page-link" href="?page={{page_obj.previous_page_number}}"><i class="fa fa-angle-left"></i></a>
