--- a/proyecto/templates/base.html
+++ b/proyecto/templates/base.html
@@ -72,7 +72,7 @@
     {% block content%} {% endblock content %}
     <footer>
 
-        <div class="container-fluid  footer mr-5 iconos">
+        <div class="container-fluid  footer mr-5  mt-5 iconos">
             {% for p in contacto %}
             <h6 class="text-uppercase font-weight-bold mr-5">Contacto</h6>
             <p class="iconos">
