--- a/proyecto/app/static/css/style.css
+++ b/proyecto/app/static/css/style.css
@@ -253,3 +253,13 @@ p {
     font-size: 15px;
     color: #7A7A7A;
 }
+.descripcion{
+    font-family: 'Caveat', cursive;
+font-family: 'Dancing Script', cursive;
+font-family: 'Farro', sans-serif;
+font-family: 'Indie Flower', cursive;
+font-family: 'Marck Script', cursive;
+font-family: 'Pacifico', cursive;
+font-family: 'Sacramento', cursive;
+font-family: 'Satisfy', cursive;
+}
