--- a/proyecto/templates/app/infoTratamiento.html
+++ b/proyecto/templates/app/infoTratamiento.html
@@ -9,8 +9,8 @@
                 <div class="blog-details-area">
                     <img class="imgblog2" src="{{ trat.imagen.url }}" alt=""> {% autoescape off %}
 
-                    <h2 class="post-title">{{ trat.nombre }}</h2>
-                    <p>{{ trat.descripcion }}</p>
+                    <h2 class="post-title titletrat">{{ trat.nombre }}</h2>
+                    <p class="descripcion">{{ trat.descripcion }}</p>
                     {% endautoescape %}
                 </div>
             </div>
