--- a/proyecto/templates/base.html
+++ b/proyecto/templates/base.html
@@ -9,6 +9,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Hojas de estilo -->
+    <link href="https://fonts.googleapis.com/css2?family=Caveat&family=Dancing+Script:wght@500&family=Farro:wght@700&family=Indie+Flower&family=Marck+Script&family=Pacifico&family=Sacramento&family=Satisfy&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Caveat&family=Dancing+Script:wght@500&family=Indie+Flower&family=Marck+Script&family=Pacifico&family=Sacramento&family=Satisfy&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css" />
     <link rel="stylesheet" href="{% static 'css/style.css' %}" />
