--- a/proyecto/templates/app/index.html
+++ b/proyecto/templates/app/index.html
@@ -32,7 +32,8 @@
 </div> -->
 
 
-<!--Intro Section-->
+<!--Intro Section video-->
+{% if videofile %}
 <section class="view intro-video">
     <div class="col-lg-12 wow fadeIn">
         <video class="video-fluid z-depth-1" autoplay loop controls muted>
@@ -53,7 +54,7 @@
         })
     </script>
 </section>
-
+{% endif %}
 <br><br>
 
 <div class="container-fluid">
@@ -89,7 +90,7 @@
             </div>
         </section>
     </div>
-    
+
 </div>
 
 
