--- a/proyecto/templates/app/blog.html
+++ b/proyecto/templates/app/blog.html
@@ -1,21 +1,21 @@
 {% extends 'app/index.html' %} {% load static %} {% load bootstrap4 %} {% load i18n %} {% block content%}
-<section class="dento-blog-area mt-50">
-    <div class="container  ">
+<section class="dento-blog-area">
+    <div class="container blog">
         <div class="row">
             <div class="col-12 col-lg-8">
                 {% for p in blog %}
                 <!-- Single Blog Item -->
-                <div class="row no-gutters">
+                <div class="row align-items-center">
                     <div class="col-md-6 mt-4">
                         <img src="{{ p.imagen.url }}" class="" alt="...">
 
                     </div>
                     <div class="col-md-6">
-                        <div class="card-body">
-                            <h5 class="nav-link card-title mt-4" href="#">{{ p.titulo }}</h5>
+                        <div class="card-body p-0">
+                            <h5 class="card-title text-center mt-4" href="#">{{ p.titulo }}</h5>
                             <!--<h5><a class="card-title">{{ p.titulo }}</h5></a>-->
-                            <p class="card-text">{{ p.descripcion|truncatechars:148 }}</p>
-                            <a href="{% url 'app:infoblog' p.id %}">Leer más</a>
+                            <p class="card-text mb-0">{{ p.descripcion|truncatechars:213 }}</p>
+                            <a class="leerMas" href="{% url 'app:infoblog' p.id %}">Leer más</a>     
                             <p class="card-text"><small class="text-muted">{{ p.fecha }}</small></p>
                         </div>
                     </div>
@@ -24,15 +24,15 @@
 
 
                 <!-- Pagination -->
-                <nav class="dento-pagination mb-100">
-                    <ul class="pagination pagination-lg mt-4">
+                <nav class="dento-pagination mb-5 mt-5">
+                    <ul class="pagination pagination-lg  justify-content-center mt-4">
                         <li class="page-item active">
                             {% if page_obj.has_previous %}
-                            <a class="page-link" href="?page={{page_obj.previous_page_number}}"><i class="fa fa-angle-left"></i></a> {% endif %}
+                            <a class="page-link" href="?page={{page_obj.previous_page_number}}"><i class="fa fa-angle-left fa-lg"></i></a> {% endif %}
                         </li>
                         <li class="page-item">
                             {% if page_obj.has_next %}
-                            <a class="page-link" href="?page={{page_obj.next_page_number}}"><i class="fa fa-angle-right"></i></a> {% endif %}
+                            <a class="page-link" href="?page={{page_obj.next_page_number}}"><i class="fa fa-angle-right fa-lg"></i></a> {% endif %}
                         </li>
 
                     </ul>
@@ -41,13 +41,13 @@
 
 
             <!-- Dento Sidebar Area -->
-            <div class="col-8 col-lg-4 float-right ">
+            <div class="col-8 col-lg-4 col-12 col-md-8">
 
                 <div class="dento-sidebar ">
 
                     <!-- Single Widget Area -->
                     <div class="single-widget-area news-widget mt-4">
-                        <h5 class="widget-title ">LOS MÁS DESTACADOS</h5>
+                        <h5 class="widget-title mb-3">LOS MÁS DESTACADOS</h5>
 
                         <!-- Single News Area -->
                         {% for p in destacados %}
@@ -57,8 +57,8 @@
                             </div>
 
                             <div class="col-4">
-                                <a href="{% url 'app:infoblog' p.id %}" class="post-title ">{{ p.titulo }}</a>
-
+                                <a class="title" href="{% url 'app:infoblog' p.id %}" class="post-title ">{{ p.titulo }}</a>
+                                <br>
                                 <span class="post-date ">{{ p.fecha }}</span>
                             </div>
                         </div>
