--- a/proyecto/templates/base.html
+++ b/proyecto/templates/base.html
@@ -77,7 +77,7 @@
 
         <div class="container-fluid  footer mr-5  mt-5 iconos">
             {% for p in contacto %}
-            <h6 class="text-uppercase font-weight-bold mr-5">Contacto</h6>
+            <h6 class="text-uppercase font-weight-bold mr-5">{% trans 'Contacto' %}</h6>
             <p class="iconos">
                 <i class="fas fa-home mr-5"></i>{{ p.direccion }}</p>
             <p class="iconos">
