Responsive titulo centro / font family

--- a/proyecto/templates/app/index.html
+++ b/proyecto/templates/app/index.html
@@ -58,12 +58,12 @@
 <br><br>
 
 <div class="container-fluid">
-    <div class="sectiontitle">
+    <div class="sectiontitle mb-3">
         <h6 class="heading font-x2">NUESTRO CENTRO</h6> 
         
     </div>
      
-    <div class="row justify-content-center align-items-center">
+    <div class="row justify-content-center ">
     
         <div class="col-sm-4">
             <h6 class="heading font-x2">{{ mi.tituloCentro }}</h6>
