--- a/proyecto/templates/app/testimonios.html
+++ b/proyecto/templates/app/testimonios.html
@@ -5,7 +5,7 @@
 
 
     <!-- Grid row -->
-    <div class="row">
+    <div class="row-responsive">
 
         <!--Carousel Wrapper-->
         <div id="multi-item-example" class="carousel slide carousel-multi-item mb-5" data-ride="carousel">
@@ -39,7 +39,7 @@
                     <div class="row justify-content-center">
                 {% endif %}
                         
-                        <div class="col-md-3">
+                        <div class="col-md-3 mr-3 ml-3 justify-content-center">
                             <div class="testimonial">
                                 <!--Avatar-->
                                 <div class="avatar mx-auto">
@@ -51,13 +51,7 @@
                                 <h6 class="blue-text font-weight-bold my-3">{{ p.edad }}</h6>
                                 <p class="font-weight-normal"><i class="fas fa-quote-left pr-2"></i>{{p.descripcion}}</p>
                                 <!--Review-->
-                                <div class="grey-text">
-                                    <i class="fas fa-star"> </i>
-                                    <i class="fas fa-star"> </i>
-                                    <i class="fas fa-star"> </i>
-                                    <i class="fas fa-star"> </i>
-                                    <i class="fas fa-star-half-alt"> </i>
-                                </div>
+
                             </div>
                         </div>
 
