--- a/proyecto/app/static/css/style.css
+++ b/proyecto/app/static/css/style.css
@@ -30,6 +30,7 @@ img:hover {
 
 /*IDIOMA*/
 
+
 .bandera {
     width: 40px;
     height: 20px;
@@ -57,6 +58,12 @@ img:hover {
     color: #16a374;
     text-shadow: #4EBE7B 0.1em 0.1em 0.2em;
     font-style: italic;
+}
+
+@media (max-width:400px){
+    .titulo_logo{
+       font-size: 1.2em;
+    }
 }
 
 
@@ -108,7 +115,6 @@ img:hover {
     text-align: center;
     font-size: 18px;
     margin-left: 6px;
-    margin-top: 50px;
     text-decoration: underline;
     color: #16a374;
     text-shadow: #4EBE7B 0.1em 0.1em 0.2em;
@@ -148,7 +154,6 @@ img:hover {
     border-radius: 25px 0;
     color: #7A7A7A;
     background-color: #e0f2f1;
-    font-family: "Comic Sans MS", cursive, sans-serif;
     font-size: 15px;
 }
 
@@ -168,6 +173,10 @@ img:hover {
     margin-left: 0;
 }
 
+.post-title {
+    font-style: italic;
+    color: #4EBE7B;
+}
 
 /*PATOLOGIAS*/
 
@@ -194,6 +203,11 @@ h5.card-title {
 
 .margenp {
     margin: 250px;
+}
+
+.dropdown-item-text {
+    font-size: 15px;
+    color: #7A7A7A;
 }
 
 
@@ -258,23 +272,10 @@ p.card-text {
 }
 
 p {
-    font-family: "Comic Sans MS", cursive, sans-serif;
     font-size: 20px;
-}
-
-.dropdown-item-text {
-    font-family: "Comic Sans MS", cursive, sans-serif;
-    font-size: 15px;
+    font-style: italic;
     color: #7A7A7A;
 }
 
-.descripcion {
-    font-family: 'Caveat', cursive;
-    font-family: 'Dancing Script', cursive;
-    font-family: 'Farro', sans-serif;
-    font-family: 'Indie Flower', cursive;
-    font-family: 'Marck Script', cursive;
-    font-family: 'Pacifico', cursive;
-    font-family: 'Sacramento', cursive;
-    font-family: 'Satisfy', cursive;
-}
+
+
