--- a/proyecto/templates/base.html
+++ b/proyecto/templates/base.html
@@ -9,8 +9,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Hojas de estilo -->
-    <link href="https://fonts.googleapis.com/css2?family=Caveat&family=Dancing+Script:wght@500&family=Farro:wght@700&family=Indie+Flower&family=Marck+Script&family=Pacifico&family=Sacramento&family=Satisfy&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Caveat&family=Dancing+Script:wght@500&family=Indie+Flower&family=Marck+Script&family=Pacifico&family=Sacramento&family=Satisfy&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Caveat&family=Dancing+Script:wght@500&family=Farro:wght@700&family=Indie+Flower&family=Marck+Script&family=Pacifico&family=Sacramento&family=Satisfy&display=swap"
+        rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Caveat&family=Dancing+Script:wght@500&family=Indie+Flower&family=Marck+Script&family=Pacifico&family=Sacramento&family=Satisfy&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css" />
     <link rel="stylesheet" href="{% static 'css/style.css' %}" />
@@ -29,13 +33,14 @@
             <h2 class="titulo_logo ml-3 ">Centro de Salud <br> &nbsp;&nbsp;&nbsp;&nbsp;Integrada</h2>
         </a>
 
-        <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon">
-        <i class="fas fa-bars" style="color:rgb(77, 184, 118); font-size:28px;">
-        </i></span>
-    </button>
+        <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon">
+                <i class="fas fa-bars" style="color:rgb(77, 184, 118); font-size:28px;">
+                </i></span>
+        </button>
 
-        <div class="collapse navbar-collapse d-flex justify-content-center" id="navbarNav">
+        <div class="collapse navbar-collapse " id="navbarNav">
             <ul class="nav navbar-nav">
 
                 <li class="nav-item">
@@ -58,15 +63,19 @@
                     <a class="nav-link" href="{% url 'app:testimonios' %}">{% trans 'TESTIMONIOS' %}</a>
                 </li>
 
-                <li class="bandera">
-                    {% language 'es' %}
-                    <a href="{% url 'app:index' %}"><img src="{% static 'img/banderaES.jpg' %}"></a>
+                <li class="idioma ml-5 mr-2">
+                    {% language 'en' %}
+                    <a class="" href="{% url 'app:index' %}">
+                        <i>EN</i>
+                    </a>
                     {% endlanguage %}
                 </li>
-
-                <li class="bandera ml-2">
-                    {% language 'en' %}
-                    <a href="{% url 'app:index' %}"><img src="{% static 'img/banderaEN.jpg' %}"></a>
+                
+                <li class="idioma">
+                    {% language 'es' %}
+                    <a class="" href="{% url 'app:index' %}">
+                        <i>ES</i>
+                    </a>
                     {% endlanguage %}
                 </li>
             </ul>
@@ -77,7 +86,7 @@
 
         <div class="container-fluid  footer mr-5  mt-5 iconos">
             {% for p in contacto %}
-            <h6 class="text-uppercase font-weight-bold mr-5">{% trans 'Contacto' %}</h6>
+            <h6 class="text-uppercase font-weight-bold mr-5">Contacto</h6>
             <p class="iconos">
                 <i class="fas fa-home mr-5"></i>{{ p.direccion }}</p>
             <p class="iconos">
