--- a/proyecto/templates/app/index.html
+++ b/proyecto/templates/app/index.html
@@ -58,13 +58,13 @@
 <br><br>
 
 <div class="container-fluid">
-    <div class="sectiontitle mb-3">
-        <h6 class="heading font-x2">NUESTRO CENTRO</h6> 
-        
+    <div class="sectiontitle mb-5">
+        <h6 class="heading font-x2">NUESTRO CENTRO</h6>
+
     </div>
-     
+
     <div class="row justify-content-center ">
-    
+
         <div class="col-sm-4">
             <h6 class="heading font-x2">{{ mi.tituloCentro }}</h6>
             <p class="text-justify">{{ mi.textoCentro }}</p>
@@ -87,7 +87,7 @@
                 </article>
             </div>
             <div class="col-md-12">
-                <h6 class="heading d-flex justify-content-center">{{ mi.nombreDr }}</h6>
+                <h6 class="heading d-flex justify-content-center mt-5">{{ mi.nombreDr }}</h6>
                 <article class="one_half">
                     <blockquote>{{ mi.textoPerfil }}</blockquote>
                 </article>
