--- a/proyecto/templates/base.html
+++ b/proyecto/templates/base.html
@@ -9,20 +9,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <!-- Hojas de estilo -->
-    <link
-        href="https://fonts.googleapis.com/css2?family=Caveat&family=Dancing+Script:wght@500&family=Farro:wght@700&family=Indie+Flower&family=Marck+Script&family=Pacifico&family=Sacramento&family=Satisfy&display=swap"
-        rel="stylesheet">
-    <link
-        href="https://fonts.googleapis.com/css2?family=Caveat&family=Dancing+Script:wght@500&family=Indie+Flower&family=Marck+Script&family=Pacifico&family=Sacramento&family=Satisfy&display=swap"
-        rel="stylesheet">
+
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css" />
     <link rel="stylesheet" href="{% static 'css/style.css' %}" />
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-    <script src="https://kit.fontawesome.com/94d365e8cc.js" crossorigin="anonymous"></script>
+
+
 </head>
 
 <body>
@@ -33,8 +26,7 @@
             <h2 class="titulo_logo ml-3 ">Centro de Salud <br> &nbsp;&nbsp;&nbsp;&nbsp;Integrada</h2>
         </a>
 
-        <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNav"
-            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler ml-auto" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon">
                 <i class="fas fa-bars" style="color:rgb(77, 184, 118); font-size:28px;">
                 </i></span>
@@ -70,7 +62,7 @@
                     </a>
                     {% endlanguage %}
                 </li>
-                
+
                 <li class="idioma">
                     {% language 'es' %}
                     <a class="" href="{% url 'app:index' %}">
@@ -97,11 +89,12 @@
         </div>
     </footer>
 
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+    <script src="https://kit.fontawesome.com/94d365e8cc.js" crossorigin="anonymous"></script>
     <script src='https://img1.wsimg.com/tcc/tcc_l.combined.1.0.6.min.js '></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js "></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js "></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrami.min.js "></script>
+
 </body>
 
 </html>
